     are interacted with or control is given to the player for the first time.
   * Added a new subdialog in Preferences to clean or purge the WML cache.
   * Fixed AI engine names in the MP game setup screen being translated to the
     language selected when Wesnoth was started rather than the current
     language (bug #22092).
 * WML engine:
   * Added customizable recall costs for unit types and individual units,
     using the new recall_cost attribute in [unit_type] and [unit].
   * Added support for [elseif] tags inside [if]
   * Schema validator messages now conform better to the new WML
     parser/preprocessor diagnostics format introduced in version 1.11.10.
   * Added define= functionality to scenarios, eras, and modifications.
   * [unit] uses passed [advancement]s instead of unittypes advancements if
     [advancement] were given in [unit].
   * allow [lua] tags inside [modification] and [era] (which have the same
     efffect as [lua] tags inside [scenario]).
   * enable side_for= in key [message] with [option]s.
   * Fixed mouse tracking issue with workaround by changing the default window
     resolution for OS X to 800 x 600 (bug #20332).
   * added [effect] apply_to=fearless/healthy which is now used by healty/fearless 
     traits instead of hardcoding the id of those traits in c++.
 * Miscellaneous and bug fixes:
   * replace 'fight_on_without_leader'=yes/no with defeat_condition=no_leader/
     no_units/always/never which allows the wml developer to decide when a side
     is considered defeated
   * Fix Fisher-Yates implemenation of Lua helper.shuffle (bug #21706)
   * Fixed issues with the ~BG() image path function not always working with
     cached images.
   * Idle controlled sides now serialize as human controlled.
   * Fixed bug #20876: A segfault in cut_surface.
   * Dropped support for AmigaOS, BeOS, and OS/2.
   * Increased the sound mixer channel allocation from 16 to 32, thereby