@@ -1138,6 +1138,9 @@
         name = "Laurent Birtz"
     [/entry]
     [entry]
+        name = "Lovens Weche (LovCAPONE)"
+    [/entry]
+    [entry]
         name = "Luiz Fernando de Faria Pereira (lfernando)"
     [/entry]
     [entry]
