@@ -105,6 +105,8 @@ Version 1.13.0-dev:
    * Fixed AI engine names in the MP game setup screen being translated to the
      language selected when Wesnoth was started rather than the current
      language (bug #22092).
+   * Added a "Disable automatic moves" preference to disable automatic movements 
+     at the begining of a turn.
  * WML engine:
    * Added customizable recall costs for unit types and individual units,
      using the new recall_cost attribute in [unit_type] and [unit].
